# LibJpegDemo

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/imgb/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: effective-bitmap.c  native-lib.cpp
app/src/main/java/com/example/imgb/: CompressBitmapActivity.java  EffectiveBitmapUtils.java  FileUtil.java  MainActivity.java  UriToPathUtils.java
app/src/main/res/layout/: activity_compress_bitmap.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/imgb/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
